# The_prisoner_game_git

./: Achievement.cpp  Achievement.h  CMakeLists.txt  Client.cpp  Client.h  Coin.cpp  Coin.h  Drawable.cpp  Drawable.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Enumfile.h  Eyes.cpp  Eyes.h  GameCharacter.cpp  GameCharacter.h  Inventory.cpp  MapLoader.cpp  MapLoader.h  Mappa.cpp  Mappa.h  Observer.cpp  Observer.h  Player.cpp  Player.h  Powerup.cpp  Powerup.h  Projectile.cpp  Projectile.h  README  Strategy.cpp  Strategy.h  Subject.h  Update.cpp  Update.h  Updater.cpp  Updater.h  main.cpp  (+2 more)
Resources/: mappetta prova
test/: CMakeLists.txt  Tester.cpp
